# sftpgo-k8s-operator

./: Cargo.toml  Dockerfile  index.yaml
.github/workflows/: docker-image.yml  release.yml
chart/: Chart.yaml  local-deploy.sh  values.yaml
chart/sftpgo-operator/: Chart.yaml
chart/sftpgo-operator/templates/: operator.yaml  sftpgofolders.sftpgo.zlepper.dk.yaml  sftpgoservers.sftpgo.zlepper.dk.yaml
chart/templates/: operator.yaml  servers.sftpgo.zlepper.dk.yaml  sftpgoadmins.sftpgo.zlepper.dk.yaml  sftpgofolders.sftpgo.zlepper.dk.yaml  sftpgoservers.sftpgo.zlepper.dk.yaml  sftpgousers.sftpgo.zlepper.dk.yaml
charts/: index.yaml  sftpgo-operator-0.1.0.tgz
charts/sftpgo-operator/: Chart.yaml  local-deploy.sh  values.yaml
charts/sftpgo-operator/templates/: crds.yaml  operator.yaml  sftpgoadmins.sftpgo.zlepper.dk.yaml  sftpgoservers.sftpgo.zlepper.dk.yaml  sftpgousers.sftpgo.zlepper.dk.yaml
crds/: Cargo.toml
crds/src/: admin.rs  filesystem.rs  folder.rs  lib.rs  server.rs  sftpgo_server_reference.rs  sftpgo_status.rs  user.rs  viper_environment_serializer.rs  virtual_folder_reference.rs
examples/simple_ftp/: server.yaml
operator/: Cargo.toml
operator/src/: admin_reconciler.rs  consts.rs  filesystem.rs  finalizers.rs  folder_reconciler.rs  main.rs  reconciler.rs  sftpgo_multi_client.rs  sftpgo_server_reconciler.rs  user_reconciler.rs  viper_environment_serializer.rs
schema_generator/: Cargo.toml
schema_generator/src/: main.rs
sftpgo-client/: Cargo.toml
sftpgo-client/src/: admin_token.rs  admins.rs  auth.rs  client.rs  error_response.rs  filesystem.rs  folders.rs  lib.rs  rest_client.rs  users.rs  virtual_folder_reference.rs
