[package]
name = "crds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.82.2", default-features = false, features = ["client", "rustls-tls", "runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_25"] }
serde = "1"
serde_json = "1.0"
schemars = "0.8"
thiserror = "1"
