[package]
name = "sftpgo-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crds = { path = "../crds" }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.82.2", default-features = false, features = ["client", "rustls-tls", "runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_25"] }
serde = "1"
serde_json = "1.0"
schemars = "0.8"
thiserror = "1"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
