[package]
name = "sftpgo-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
chrono = {version = "0.4", features = ["serde"] }
thiserror = "1"
async-trait = "0.1"
base64 = "0.21"
url = "2.3"
tokio = { version = "1", features = ["sync"] }
